css/meeting.css
/* ... */
    .bigCircle p + p strong {
        font-size: 1.5em;
    }
        .bigCircle p + p strong small,
            .mediumCircle small {
            font-size: 1em;
        }


    .circlePanel.mediumCircle {
        font-size: 6.1px;
        font-size: 1.6vw;
        top: 45em;
        right: 12.6em;
        margin-bottom: -14em;
        /*border-width: 0.4em;*/
    }
        .mediumCircle .mainData {
            top: 1.6em;
        }
        .mediumCircle p strong {
            font-size: 2.2em;
            line-height: 1em;
        }

    .circlePanel.smallCircle {
        font-size: 4.2px;
        font-size: 1.1vw;
        top: 50em;
        right: 2.5em;
        /*border-width: 0.6em;*/
    }
        .smallCircle .mainData {
            top: 2.2em;
        }
        .circlePanel.smallCircle p + p {
            top: 4.7em;
        }
            .circlePanel.smallCircle p + p strong {
                padding-top: 0.3em;
            }
    .circlePanel .sp.icon {
        display: inline-block;
        width: 1.728em;
        height: 1.76em;
    }
    .circlePanel .sp.icon, .circlePanel .sp-before:before {
        background-size: 11.6em;
    }

    .circlePanel .indent {
        text-indent: -9000px;
    }
        .circlePanel .icon.time { background-position: -3.2em -2em; }
        .circlePanel .icon.persons {
            height: 2em;
            width: 2.25em;
            background-position: -9.3em -0.3em;
            top: -0.9em;
            position: relative;
            background-size: 21.2em;
        }
        .circlePanel .icon.timeSmall:before {
            background-position: -10.1em -0.4em;
            background-size: 14em;
            width: 1.1em;
            height: 1.1em;
            top: -1.1em;
            left: 50%;
            margin-left: -.4em;
        }
        .circlePanel .icon.moneySmall:before {
            background-position: -13.3em -0.4em;
            background-size: 16em;
            width: 1.1em;
            height: 1.1em;
            top: -1.1em;
            left: 50%;
            margin-left: -.4em;
        }
        .circlePanel .money {
            padding-left: .75em;
        }
        .circlePanel .money:before {
            background-position: -12.6em -0.45em;
            width: .9em;
            height: 1em;
            background-size: 15em;
        }
        .circlePanel .sp.moneyPerPerson {
            background-position: -5.45em -0.2em;
            width: 0.9em;
            height: 0.8em;
            background-size: 9.3em;
        }

    @media (min-width:768px) {
        .circlePanel { font-size: 21px; }
            .circlePanel.smallCircle { font-size: 7px; }
            .circlePanel.mediumCircle { font-size: 10.2px; }

        #circlesWrap {
            padding-top: 700px;
        }
    }

    @media (min-width:960px) {
        .circlePanel { font-size: 25.5px; }
            .circlePanel.smallCircle { font-size: 8.5px; }
            .circlePanel.mediumCircle { font-size: 12.4px; }

        #circlesWrap {
            padding-top: 860px;
        }
    }



    @media (max-width: 379px) {
        #circlesWrap {
            padding-top: 120%;
        }

        .circlePanel {
            font-size: 8px;
            font-size: 2.9vw;
            right: 11em;
        }
            .circlePanel.smallCircle {
                font-size: 3.6px;
                font-size: 1.3vw;
                left: auto;
                top: 35em;
            }

            .circlePanel.mediumCircle {
                font-size: 5px;
                font-size: 1.7vw;
                left: auto;
                top: 37em;
                right: 15em;
            }
    }



/*= CIRCLE TIMER */

.timer {
    /*position:relative;*/

}

    .timer > .slice {
        position:absolute;
        width:22em;
        height:22em;
        clip:rect(0,22em,22em,11em);
        padding: 0;
        margin:-4px;
    }
        .timer.extratime > .slice {
            margin:-0.2em;
        }
    .timer > .slice.gt50 {
        clip:rect(auto, auto, auto, auto);
    }
    .timer > .slice > .pie {
        border: 6px solid #9C0;
        position:absolute;
        width:22em; /* 1 - (2 * border width) */
        height:22em; /* 1 - (2 * border width) */
        clip:rect(0,11em,22em,0em);
        -moz-border-radius:11em;
        -webkit-border-radius:11em;
        border-radius:11em;
        /*margin:-0.2em;*/
    }
        .timer.extratime > .slice > .pie {
            border-color: #F44;
            /*margin:-0.18em;*/
        }

    .timer > .slice > .pie.fill {
        -moz-transform:rotate(180deg) !important;
        -webkit-transform:rotate(180deg) !important;
        -o-transform:rotate(180deg) !important;
        transform:rotate(180deg) !important;

        -webkit-transform: rotate(182.88deg);
    }
    .timer.fill > .percent {
        display: none;
    }
    .timer.fill > .slice > .pie {
        border: transparent;
        background-color: #c0c0c0;
        width:21.8em;
        height:21.8em;
    }


/* end of circle timer */


.errorInfoPanel {
    background-color: #f44;
    color:#6C0000;
    padding: 1em;
    margin-bottom: 1em;
}

/*= CALCULATOR */
.calculator {}

    .calculator label {
        display: block;
        text-align: center;
        margin-bottom: 1em;
    }
    .calculator input {
        display: block;
        background-color: rgba(0,0,0,0.8);
        border-width: 0;
        font-size: 25px;
        font-size: 2.5rem;
        color: #fff;
        font-weight: bold;
        text-align: right;
        height: 50px;
        line-height: 44px;

    }
    .calculator ul {
        margin-bottom: 1em;
    }
    .calculator li {
        float: left;
        width: 33%;
        margin:0;
    }
        .calculator li.key_indent {
            margin-left: 33%;
        }
        .calculator li a {
            display: block;
            margin:3px;
            font-size: 2.9rem;
            padding: .4em .2em;
        }
/* ... */

